# Tiled2GBA

./: .gitignore  CMakeLists.txt  LICENCE  README.md
assets/: map.tmx  sky.aseprite  tileset.tsx
assets/size16-2/: map.tmx
assets/size8-2/: map.tmx
assets/size8-3/: untitled.tsx
assets/size8-4/: map.tmx
converter/: CMakeLists.txt
converter/src/: main.cpp
converter/src/log/: logger.cpp  logger.hpp
examples/assets/size16/: map.tmx
examples/assets/size16-terrain-objects/: map.tmx
examples/assets/size32-wide-wrong-size/: map.tmx
examples/mapViewer/: .gitignore  Makefile
examples/size16/: untitled.tsx
examples/size16-terrain/: map.tmx
examples/size16-terrain-objects/: map.tmx  untitled.tsx
examples/size16-town/: map.tmx  tileset.tsx
examples/size32-large/: map.tmx
examples/size32-large-layered/: map.tmx
examples/size32-long/: map.tmx
examples/size8/: grass.aseprite
examples/size8-2/: tileset.aseprite  untitled.tsx
examples/size8-4/: untitled.tsx
player/: .gitignore  Makefile
player/src/: loadMap.c  loadMapFromCode.c  main.c  main.h  showMapObjects.c
src/: main.cpp  main.h  main.hpp
src/codeWriter/: codeWriter.cpp  codeWriter.h
src/gba/: background.h
src/gbaMap/: gbaMap.cpp  gbaMap.hpp
src/log/: logger.cpp  logger.hpp
src/mapConverter/: mapConverter.cpp  mapConverter.hpp
src/tileLayerConverter/: tileLayerConverter.h  tileSetConverter.cpp
src/tileSetConverter/: tileSetConverter.cpp  tileSetConverter.h
tools/gbfs/: Makefile  README.md
tools/mapViewer/: Makefile  README.md
tools/padbin/: LICENSE  Makefile  README.md
(+148 files in other folders)
